--- a/src/clock.html
+++ b/src/clock.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <title>Hello World!</title>
   <link rel="stylesheet" href="clock.css" />
-  <script type="module" src="clock.js"></script>
+  <script src="clock.js" type="module"></script>
 </head>
 
 <body>
@@ -13,5 +13,6 @@
     <div id="timeNum"></div>
   </div>
 </body>
+<audio preload="auto" id="alarm" style="visibility: hidden;"></audio>
 
 </html>
