--- a/src/clock.html
+++ b/src/clock.html
@@ -5,14 +5,16 @@
   <meta charset="UTF-8" />
   <title>Hello World!</title>
   <link rel="stylesheet" href="clock.css" />
-  <script src="clock.js" type="module"></script>
 </head>
 
 <body>
   <div id="root">
     <div id="timeNum"></div>
   </div>
+  <audio preload="auto" id="alarm" style="visibility: hidden;"></audio>
+  <audio preload="auto" id="pause" style="visibility: hidden;" src="3.mp3"></audio>
+  <script src="clock.js" type="module"></script>
 </body>
-<audio preload="auto" id="alarm" style="visibility: hidden;"></audio>
+
 
 </html>
