--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
-  <title>Hello World!</title>
-  <link rel="stylesheet" href="clock.css" />
-  <script src="vueglobalprd.js"></script>
+  <link rel="icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./src/clock.css" />
+  <title>TomatoClock</title>
 </head>
 
 <body>
@@ -23,9 +24,7 @@
     </div>
 
   </div>
-
-  <script src="clock.js" type="module"></script>
+  <script type="module" src="/src/main.js"></script>
 </body>
-
 
 </html>
